[tool.poetry]
name = "bootstrap"
version = "0.1.0"
description = "Statistics two dimensional Bootstrap for A/B testing"
authors = ["Arist0craft <dimnktn@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Arist0craft/bootstrap"


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
